# Ai-Security-Lab

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_CONTEXT.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  false-positive.yml  new-target-adapter.yml  new-vulnerability.yml
.github/workflows/: lint.yml  regression.yml  release.yml  security.yml  tests.yml  validate-vulnerabilities.yml
configs/scans/: full.yml  quick.yml  standard.yml
configs/targets/: agent.example.yml  local-ollama.example.yml  openai-compatible.example.yml  rag-api.example.yml
docker/: docker-compose.yml  sandbox.Dockerfile  scanner.Dockerfile
docs/: architecture.md  contributing-vulnerabilities.md  creating-labs.md  threat-model.md  vulnerability-format.md  writing-detectors.md  writing-mitigations.md  writing-probes.md
examples/rag-security/: .gitkeep
labs/models/: .gitkeep
policies/: ci.yml  default.yml  strict.yml
policies/frameworks/: mitre-atlas.yml  owasp-agentic.yml  owasp-llm.yml
schemas/: policy.schema.json  report.schema.json  target.schema.json  vulnerability.schema.json
scripts/: build_report_templates.py  generate_catalog.py  update_mappings.py  validate_registry.py
src/aisec/: __init__.py  __main__.py
src/aisec/cli/: app.py  (+6 more)
template/: README.md
template/vulnerability/: README.md  lab-setup.md
templates/lab/: README.md  docker-compose.yml
templates/vulnerability-pack/: README.md  cases.yml  manifest.yml  payloads.jsonl  references.md
tests/: conftest.py
tests/fixtures/: .gitkeep
tests/integration/: test_cli.py
tests/regression/: .gitkeep
tests/unit/: test_detectors.py  test_redaction.py  test_registry_validator.py  test_reporting.py
vulnerabilities/: README.md
vulnerabilities/agents/: README.md
(+106 files in other folders)
