[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-security-lab"
version = "0.1.0"
description = "Continuous AI security testing, mitigation, and regression validation for LLM, RAG, agent, MCP, and ML systems."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "AI Security Lab contributors" }
]
keywords = ["ai-security", "llm", "rag", "agents", "mcp", "security-testing"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Typing :: Typed"
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12"
]

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.7",
  "build>=1.2",
  "jsonschema>=4.23",
  "mypy>=1.10",
  "pip-audit>=2.7",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "types-PyYAML>=6.0"
]

[project.scripts]
aisec = "aisec.cli.app:main"

[project.urls]
Homepage = "https://github.com/ryolution/Ai-Security-Lab"
Issues = "https://github.com/ryolution/Ai-Security-Lab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aisec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "S", "UP"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "scripts"]

[tool.bandit]
exclude_dirs = ["tests", "labs"]
skips = ["B101"]
